--- a/package.json
+++ b/package.json
@@ -18,20 +18,26 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^16.0.1",
     "ejs": "^2.6.1",
     "express": "^4.17.3",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.6",
+    "mongoose-deep-populate": "^3.2.0",
     "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "util": "^0.12.4"
   }
 }
